<resources>
    <string name="app_name">Electron Music Player</string>
    <string name="music">Albums</string>
    <string name="songs">Songs</string>
    <string name="now_playing">Now Playing</string>
    <string name="description">Stock image</string>
    <string name="home">Home</string>
    <string name="albums">Albums</string>
    <string name="play">Play button</string>
    <string name="rewind_button">Rewind button</string>
    <string name="skip_track_backwards">Skip track backwards button</string>
    <string name="stop">Stop button</string>
    <string name="fast_forward_button">Fast forward button</string>
    <string name="skip_track_forward">Skip track forward button</string>
    <string name="skip_forward_pressed">Skip Forward</string>
    <string name="rewind_pressed">Rewind</string>
    <string name="play_pressed">Play</string>
    <string name="stop_pressed">Stop</string>
    <string name="fast_forward_pressed">Fast Forward</string>
    <string name="skip_back_pressed">Skip Back</string>
    <string name="play_paused">Pause</string>
    <string name="next">Next Song</string>



    <!--Album Info-->
    <string name="bensound_sample_hits">Bensound: Sample Hits</string>
    <string name="sample_description">A collection of royalty free music by Bensound.com</string>
    <string name="generic_one">Generic One: Generic Album</string>
    <string name="generic_two">Generic Two: Generic Album</string>
    <string name="generic_three">Generic Three: Generic Album</string>
    <string name="generic_four">Generic Four: Generic Album</string>
    <string name="generic_five">Generic Five: Generic Album</string>
    <string name="generic_six">Generic Six: Generic Album</string>
    <string name="generic_seven">Generic Seven: Generic Album</string>
    <string name="generic_description">A generic artist playing generic music.</string>

    <!--Song info-->
    <string name="ukulele">Ukulele</string>
    <string name="new_beginning">A New Beginning</string>
    <string name="summer">Summer</string>
    <string name="creative_minds">Creative Minds</string>
    <string name="cute">Cute</string>
    <string name="happy_rock">Happy Rock</string>
    <string name="jazzy_frenchy">Jazzy Frenchy</string>
    <string name="little_idea">Little Idea</string>
    <string name="generic_song">Generic Song</string>
</resources>
