<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".NowPlayingActivity">

    <TextView
        android:id="@+id/actionBar"
        style="@style/PsuedoActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/now_playing" />

    <ImageView
        android:id="@+id/albumImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/album_height"
        app:layout_constraintTop_toBottomOf="@id/actionBar"
        android:src="@drawable/ukulele"/>

    <TextView
        android:id="@+id/song"
        style="@style/AlbumInfo.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/ukulele"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albumImage" />

    <TextView
        android:id="@+id/album"
        style="@style/AlbumInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/bensound_sample_hits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song" />

    <LinearLayout
        android:id="@+id/buttonBar"
        app:layout_constraintTop_toBottomOf="@+id/album"
        android:gravity="center"
        android:layout_marginTop="@dimen/spacing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/skipback"
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:background="@drawable/border"
            android:src="@drawable/ic_skip_previous_black_48dp"/>

        <ImageButton
            android:id="@+id/rewind"
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:background="@drawable/border"
            android:src="@drawable/ic_fast_rewind_black_48dp"/>

        <ImageButton
            android:id="@+id/play"
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:background="@drawable/border"
            android:src="@drawable/ic_play_circle_filled_black_48dp"/>

        <ImageButton
            android:id="@+id/pause"
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:background="@drawable/border"
            android:src="@drawable/ic_pause_circle_outline_black_48dp"/>

        <ImageButton
            android:id="@+id/stop"
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:background="@drawable/border"
            android:src="@drawable/ic_stop_black_48dp"/>

        <ImageButton
            android:id="@+id/fastforward"
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:background="@drawable/border"
            android:src="@drawable/ic_fast_forward_black_48dp"/>

        <ImageButton
            android:id="@+id/skipforward"
            android:layout_width="@dimen/icon"
            android:layout_height="@dimen/icon"
            android:background="@drawable/border"
            android:src="@drawable/ic_skip_next_black_48dp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>